Fix island map image alignment - remove white gaps between tiles
Problem:
- White gaps appeared between map tile images
- Caused by line-height and inline element spacing

Solution:
- Set #islandMap img to display: block
- Set #islandMap td to line-height: 0, font-size: 0, padding: 0
- This removes all spacing between tile images

Result:
- Map tiles now display seamlessly without gaps
- Works in both Chrome and Firefox

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -327,6 +327,13 @@ h2 {
     user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
+    display: block;
+}
+
+#islandMap td {
+    line-height: 0;
+    font-size: 0;
+    padding: 0;
 }
 
 .card-header,
